Clean up link style and add bg images to blog list

--- a/_posts/2020-12-02-second.md
+++ b/_posts/2020-12-02-second.md
@@ -1,52 +1,10 @@
 ---
 layout: post
 author: nowiz
+img: /assets/images/github.png
+excerpt_separator: <!--more-->
 ---
 
-# Heading
-***
+This is another one of my articles, ooh, isn't it nice?
 
-## Smaller heading
-
-
-T
-h
-i
-s
-
-
-i
-s
-
-
-a
-
-
-v
-e
-r
-y
-
-
-l
-o
-n
-g
-
-p
-o
-s
-t
-
-
-
-
-
-
-hehe
-
-
-
-
-hehe
-
+<!--more-->
